--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.lindar</groupId>
     <artifactId>sergent</artifactId>
-    <version>2.1.3</version>
+    <version>2.1.4</version>
     <packaging>jar</packaging>
 
     <name>SEcure Random GENeraTor</name>
@@ -118,13 +118,13 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>5.0.0.RC4</version>
+            <version>5.0.0.RELEASE</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aop</artifactId>
-            <version>5.0.0.RC4</version>
+            <version>5.0.0.RELEASE</version>
         </dependency>
 
         <dependency>
